log
Thu 20 Apr 2023 04:45:22 PM UTC: 
 tests:  1|8
total_score: 0/70
f3f6f26
Thu 20 Apr 2023 04:59:58 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
75cb8dd
Thu 20 Apr 2023 05:00:08 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
41947bb
Thu 20 Apr 2023 05:10:59 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  11|6
total_score: 15/70
d5dc464
Thu 20 Apr 2023 05:14:46 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  0|0
1510222
Thu 20 Apr 2023 05:32:32 PM UTC: 
 treemap.c | 23 +++++++++++++----------
 1 file changed, 13 insertions(+), 10 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   53 |     return NULL;
      |            ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:60:29: error: statement with no effect [-Werror=unused-value]
   60 |         tree->current->right==new;
      |         ~~~~~~~~~~~~~~~~~~~~^~~~~
treemap.c:70:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   70 |   return NULL;
      |          ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
db42a65
Thu 20 Apr 2023 05:34:22 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   53 |     return NULL;
      |            ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:61:29: error: statement with no effect [-Werror=unused-value]
   61 |         tree->current->right==new;
      |         ~~~~~~~~~~~~~~~~~~~~^~~~~
treemap.c:71:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   71 |   return NULL;
      |          ^~~~
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a356b06
